Opened 15 years ago

Closed 12 years ago

#4794 closed bug (fixed)

[StyledEdit] doesn't handle "be:line" in RefsReceived

Reported by: augiedoggie Owned by: siarzhuk
Priority: normal Milestone: R1
Component: Applications/StyledEdit Version: R1/alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In BeOS, both StyledEdit and the BeIDE editor were able to handle a line number to scroll to and select when opening the file. This was sent in the B_REFS_RECEIVED message by adding an int32 with a name of "be:line" and the value being the line number.

Change History (3)

comment:1 by augiedoggie, 15 years ago

I think it also supported sending an int32 named something like "be:count" to select a certain number of lines/characters and if it didn't receive a count field in the message it defaulted to selecting the whole line given in "be:line". I don't remember for sure what the name was and whether it selected lines or characters.

in reply to:  1 comment:2 by siarzhuk, 12 years ago

Owner: changed from korli to siarzhuk
Status: newassigned

Replying to augiedoggie:

I think it also supported sending an int32 named something like "be:count" to select a

They were:

"be:line", "be:selection_offset", "be:selection_length"

This ticket was selected as GCI 2012 task: http://google-melange.appspot.com/gci/task/view/google/gci2012/7954210 I take ownership of it.

comment:3 by siarzhuk, 12 years ago

Resolution: fixed
Status: assignedclosed

Implemented in hrev45071.

Our thank goes to GCI 2012 student Vlad Slepukhin.

Note: See TracTickets for help on using tickets.