Handle be:line and °K in RefsReceived, store it in file attributes

This work was done during GCI2012

Fixes #4794

Signed-off-by: Siarzhuk Zharski <zharik@gmx.li>