src/apps/stylededit/StyledEditApp.cpp
@@ -178,7 +178,7 @@ StyledEditApp::OpenDocument()
 
 
 status_t
-StyledEditApp::OpenDocument(entry_ref* ref)
+StyledEditApp::OpenDocument(entry_ref* ref, BMessage* message)
 {
 	// traverse eventual symlink
 	BEntry entry(ref, true);
@@ -217,13 +217,19 @@ StyledEditApp::OpenDocument(entry_ref* ref)
 			if (document->Lock()) {
 				document->Activate();
 				document->Unlock();
+				if (message != NULL)
+					document->PostMessage(message);
 				return B_OK;
 			}
 		}
 	}
 
 	cascade();
-	new StyledEditWindow(gWindowRect, ref, fOpenAsEncoding);
+	document = new StyledEditWindow(gWindowRect, ref, fOpenAsEncoding);
+
+	if (message != NULL)
+		document->PostMessage(message);
+
 	fWindowCount++;
 
 	return B_OK;
@@ -248,8 +254,31 @@ StyledEditApp::RefsReceived(BMessage* message)
 	int32 index = 0;
 	entry_ref ref;
 
-	while (message->FindRef("refs", index++, &ref) == B_OK) {
-		OpenDocument(&ref);
+	while (message->FindRef("refs", index, &ref) == B_OK) {
+		int32 line;
+		if (message->FindInt32("be:line", index, &line) != B_OK)
+			line = -1;
+		int32 start, length;
+		if (message->FindInt32("be:selection_length", index, &length) != B_OK
+			|| message->FindInt32("be:selection_offset", index, &start) != B_OK)
+		{
+			start = -1;
+			length = -1;
+		}
+
+		BMessage* selMessage = NULL;
+		if (line >= 0 || (start >= 0 && length >= 0)) {
+			selMessage = new BMessage(UPDATE_LINE_SEL);
+			if (line >= 0)
+				selMessage->AddInt32("be:line", line);
+			if (start >= 0) {
+				selMessage->AddInt32("be:selection_offset", start);
+				selMessage->AddInt32("be:selection_length", max_c(0, length));
+			}
+		}
+
+		OpenDocument(&ref, selMessage);
+		index++;
 	}
 }
 
@@ -309,7 +338,7 @@ StyledEditApp::ReadyToRun()
 int32
 StyledEditApp::NumberOfWindows()
 {
- 	return fWindowCount;
+	return fWindowCount;
 }
 
 
